Make zlib mandatory
If it's required, it's good, so ensure it's there.

Change-Id: Icecc9c64ca2e4a624dd00fc28755a66a317700b8

--- a/Control
+++ b/Control
@@ -1,3 +1,3 @@
 provides: libcurl curl
-requires: stdlibs libpthread lwip
+requires: stdlibs libpthread lwip zlib
 maintainer: stephan.gerhold@kernkonzept.com
